fp-library/tests/ui/rc_fn_not_send.stderr
error[E0277]: the trait bound `RcBrand: SendUnsizedCoercible` is not satisfied
 --> tests/ui/rc_fn_not_send.rs:8:11
  |
8 |     let _ = <RcFnBrand as SendCloneableFn>::send_cloneable_fn_new(|x: i32| x);
  |              ^^^^^^^^^ the trait `SendUnsizedCoercible` is not implemented for `RcBrand`
  |
help: the trait `SendUnsizedCoercible` is implemented for `ArcBrand`
 --> src/types/arc_ptr.rs
  |
  |     impl SendUnsizedCoercible for ArcBrand {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: required for `FnBrand<RcBrand>` to implement `SendCloneableFn`

error[E0277]: the trait bound `RcBrand: SendUnsizedCoercible` is not satisfied
 --> tests/ui/rc_fn_not_send.rs:8:10
  |
8 |     let _ = <RcFnBrand as SendCloneableFn>::send_cloneable_fn_new(|x: i32| x);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SendUnsizedCoercible` is not implemented for `RcBrand`
  |
help: the trait `SendUnsizedCoercible` is implemented for `ArcBrand`
 --> src/types/arc_ptr.rs
  |
  |     impl SendUnsizedCoercible for ArcBrand {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: required for `FnBrand<RcBrand>` to implement `SendCloneableFn`
